[skip ci] TestSuitePermissionEvaluator on backend
