# save-backend/backend-api-docs.json
@@ -358,15 +358,122 @@
         }
       }
     },
-    "/api/v1/test-suites/get-by-ids": {
+    "/api/v1/test-suites/{ownerOrganizationName}/{testSuiteId}": {
       "post": {
         "tags": [
+          "rights",
+          "organizations",
+          "test-suites"
+        ],
+        "summary": "Set organization\u0027s rights for given test suite.",
+        "description": "Set organization\u0027s rights for given test suite.",
+        "operationId": "setRights",
+        "parameters": [
+          {
+            "name": "ownerOrganizationName",
+            "in": "path",
+            "description": "name of an organization-maintainer",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "testSuiteId",
+            "in": "path",
+            "description": "id of test suite that is maintained",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          },
+          {
+            "name": "X-Authorization-Source",
+            "in": "header",
+            "required": true,
+            "example": "basic"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SetRightsRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "403": {
+            "description": "Given organization has been forbidden to change given test suite rights",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Requested organization, test suite or organization-maintainer doesn\u0027t exist",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Rights changed",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "basic": []
+          }
+        ]
+      }
+    },
+    "/api/v1/test-suites/get-by-ids/{organizationName}": {
+      "post": {
+        "tags": [
+          "rights",
+          "organizations",
           "test-suites"
         ],
         "summary": "Get test suites by ids.",
-        "description": "Get list of available test suites by their ids.",
+        "description": "Get list of available test suites for given organization by their ids.",
         "operationId": "getTestSuitesByIds",
         "parameters": [
+          {
+            "name": "organizationName",
+            "in": "path",
+            "description": "name of an organization",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "isContest",
             "in": "query",
@@ -393,8 +500,34 @@
           "required": true
         },
         "responses": {
+          "404": {
+            "description": "Organization with such name was not found.",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TestSuiteDto"
+                  }
+                }
+              }
+            }
+          },
           "200": {
             "description": "Successfully fetched test suites by ids.",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TestSuiteDto"
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Current user doesn\u0027t have enough permissions to access test suites from current organization.",
             "content": {
               "*/*": {
                 "schema": {
@@ -3301,24 +3434,123 @@
         ]
       }
     },
-    "/api/v1/test-suites/get-by-organization": {
+    "/api/v1/test-suites/{organizationName}/{testSuiteId}": {
       "get": {
         "tags": [
+          "rights",
+          "organizations",
           "test-suites"
         ],
-        "summary": "Get test suites by organization.",
-        "description": "Get list of available test suites posted by given organization.",
-        "operationId": "getTestSuitesByOrganizationName",
+        "summary": "Get organization\u0027s rights for given test suite.",
+        "description": "Get organization\u0027s rights for given test suite.",
+        "operationId": "getRights",
         "parameters": [
           {
             "name": "organizationName",
-            "in": "query",
-            "description": "name of an organization",
+            "in": "path",
+            "description": "name of an organization for rights check",
             "required": true,
             "schema": {
               "type": "string"
             }
           },
+          {
+            "name": "testSuiteId",
+            "in": "path",
+            "description": "id of a test suite",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          },
+          {
+            "name": "X-Authorization-Source",
+            "in": "header",
+            "required": true,
+            "example": "basic"
+          }
+        ],
+        "responses": {
+          "403": {
+            "description": "Permissions for test suite access were not gained.",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string",
+                  "enum": [
+                    "MAINTAIN",
+                    "USE",
+                    "NONE"
+                  ]
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Successfully fetched organization\u0027s rights.",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string",
+                  "enum": [
+                    "MAINTAIN",
+                    "USE",
+                    "NONE"
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Requested organization or test suite doesn\u0027t exist.",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string",
+                  "enum": [
+                    "MAINTAIN",
+                    "USE",
+                    "NONE"
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string",
+                  "enum": [
+                    "MAINTAIN",
+                    "USE",
+                    "NONE"
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "basic": []
+          }
+        ]
+      }
+    },
+    "/api/v1/test-suites/public": {
+      "get": {
+        "tags": [
+          "rights",
+          "organizations",
+          "test-suites"
+        ],
+        "summary": "Get list of public test suites.",
+        "description": "Get list of public test suites.",
+        "operationId": "getPublicTestSuites",
+        "parameters": [
           {
             "name": "isContest",
             "in": "query",
@@ -3328,11 +3560,23 @@
               "type": "boolean",
               "default": false
             }
+          },
+          {
+            "name": "organizationName",
+            "in": "path",
+            "description": "name of an organization",
+            "required": true
+          },
+          {
+            "name": "X-Authorization-Source",
+            "in": "header",
+            "required": true,
+            "example": "basic"
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully fetched test suites by organization name.",
+            "description": "Successfully fetched public test suites.",
             "content": {
               "*/*": {
                 "schema": {
@@ -3365,15 +3609,25 @@
         ]
       }
     },
-    "/api/v1/test-suites/filtered": {
+    "/api/v1/test-suites/filtered/{organizationName}": {
       "get": {
         "tags": [
+          "rights",
+          "organizations",
           "test-suites"
         ],
         "summary": "Get test suites with filters.",
         "description": "Get test suites with filters.",
         "operationId": "getFilteredTestSuites",
         "parameters": [
+          {
+            "name": "organizationName",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "tags",
             "in": "query",
@@ -3450,15 +3704,26 @@
         ]
       }
     },
-    "/api/v1/test-suites/available": {
+    "/api/v1/test-suites/available/{organizationName}": {
       "get": {
         "tags": [
+          "rights",
+          "organizations",
           "test-suites"
         ],
-        "summary": "Get public test suites.",
-        "description": "Get list of available test suites.",
-        "operationId": "getPublicTestSuites",
+        "summary": "Get list of test suites that are available for given organization.",
+        "description": "Get list of test suites that are available for given organization.",
+        "operationId": "getAvailableTestSuitesByOrganization",
         "parameters": [
+          {
+            "name": "organizationName",
+            "in": "path",
+            "description": "name of an organization",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "isContest",
             "in": "query",
@@ -3468,11 +3733,43 @@
               "type": "boolean",
               "default": false
             }
+          },
+          {
+            "name": "X-Authorization-Source",
+            "in": "header",
+            "required": true,
+            "example": "basic"
           }
         ],
         "responses": {
+          "404": {
+            "description": "Organization with such name was not found.",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TestSuiteDto"
+                  }
+                }
+              }
+            }
+          },
           "200": {
-            "description": "Successfully fetched public test suites.",
+            "description": "Successfully fetched test suites available for given organization.",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TestSuiteDto"
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Current user doesn\u0027t have enough permissions to access test suites from current organization.",
             "content": {
               "*/*": {
                 "schema": {
@@ -3802,7 +4099,7 @@
         ]
       }
     },
-    "/api/v1/test-suites-sources/avaliable": {
+    "/api/v1/test-suites-sources/available": {
       "get": {
         "tags": [
           "test-suites-source"
@@ -5207,7 +5504,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully fetched contests avaliable for project.",
+            "description": "Successfully fetched contests available for project.",
             "content": {
               "*/*": {
                 "schema": {
@@ -6411,6 +6708,101 @@
         ]
       }
     },
+    "/api/v1/test-suites/{ownerOrganizationName}/{testSuiteId}/{requestedOrganizationName}": {
+      "delete": {
+        "tags": [
+          "rights",
+          "organizations",
+          "test-suites"
+        ],
+        "summary": "Remove organization\u0027s rights over test suite with given id.",
+        "description": "Remove organization\u0027s rights over test suite with given id.",
+        "operationId": "removeRights",
+        "parameters": [
+          {
+            "name": "ownerOrganizationName",
+            "in": "path",
+            "description": "name of an organization-maintainer",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "testSuiteId",
+            "in": "path",
+            "description": "id of test suite that is maintained",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          },
+          {
+            "name": "requestedOrganizationName",
+            "in": "path",
+            "description": "name of an organization to be maintained",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "X-Authorization-Source",
+            "in": "header",
+            "required": true,
+            "example": "basic"
+          }
+        ],
+        "responses": {
+          "403": {
+            "description": "Given organization has been forbidden to change given test suite rights",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Requested organization, test suite or organization-maintainer doesn\u0027t exist",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Rights were successfully removed",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "basic": []
+          }
+        ]
+      }
+    },
     "/api/v1/projects/{organizationName}/{projectName}/users/roles/{userName}": {
       "delete": {
         "tags": [
@@ -6974,6 +7366,26 @@
           }
         }
       },
+      "SetRightsRequest": {
+        "required": [
+          "organizationName",
+          "rights"
+        ],
+        "type": "object",
+        "properties": {
+          "organizationName": {
+            "type": "string"
+          },
+          "rights": {
+            "type": "string",
+            "enum": [
+              "MAINTAIN",
+              "USE",
+              "NONE"
+            ]
+          }
+        }
+      },
       "GitDto": {
         "required": [
           "url"
@@ -6993,6 +7405,7 @@
       },
       "TestSuiteDto": {
         "required": [
+          "isPublic",
           "name",
           "plugins",
           "source",
@@ -7036,6 +7449,9 @@
                 "FIX AND WARN"
               ]
             }
+          },
+          "isPublic": {
+            "type": "boolean"
           }
         }
       },
